--- a/pages/tools.html
+++ b/pages/tools.html
@@ -19,8 +19,8 @@
 </button>
 
 <button onclick="showToolsSection('numbring')">
-    <img id="i_setting" alt="setting" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
-    <span id="t_62"></span>
+    <img id="i_AmountWords" alt="AmountWords" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+    <span id="t_1273"></span>
 </button>
 
 <button onclick="showToolsSection('qrCode')">
@@ -29,7 +29,7 @@
 </button>
 
 <button onclick="showToolsSection('currencyExchange')">
-    <img id="i_currencyExchange" alt="currencyExchange" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+    <img id="i_CurrencyExchange" alt="CurrencyExchange" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
     <span id="t_1272"></span>
 </button>
 
