--- a/pages/testAndTools/test.html
+++ b/pages/testAndTools/test.html
@@ -1,146 +1,208 @@
-<!DOCTYPE html>
-<html lang="ar">
+<script src="/BidStory/js/dataBase/dbManager.js"></script>
 
-<head>
-    <meta charset="UTF-8">
-    <title>تصدير جدول HTML إلى Excel</title>
-    <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
-    <style>
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            direction: rtl;
+<script>
+    // ✅ مصفوفات عامة لتجميع البيانات
+    const allDatabaseNames = [];              // لتجميع أسماء جميع قواعد البيانات
+    const allProcessNames = [];              // لتجميع أسماء كل العمليات (العمليات الرئيسية)
+    const itemsPerProcess = {};              // لكل عملية: العناصر التابعة لها
+    const dbsPerItem = {};                   // لكل عنصر: قواعد البيانات المرتبطة به
+
+    // ✅ التحقق من وجود قاعدة بيانات ثم إضافتها إلى القائمة العامة
+    async function checkAndAddDatabase(dbName) {
+        if (await checkDatabaseExists(dbName)) {
+            allDatabaseNames.push(dbName);
+            return true;
+        }
+        return false;
+    }
+
+    // ✅ جلب كل العمليات من قاعدة بيانات "allPro"
+    async function fetchAllProcesses() {
+        const dbName = "allPro";
+        const processKeys = [];
+
+        if (!(await checkAndAddDatabase(dbName))) return processKeys;
+
+        const db = new noUpgrade(dbName);
+        const rows = await db.getAllDataFromTable("rows");
+
+        if (Array.isArray(rows)) {
+            for (const row of rows) {
+                if (row?.key !== undefined) {
+                    processKeys.push(row.key.toString());
+                }
+            }
+        } else {
+            console.warn("⚠️ البيانات في allPro غير صالحة:", rows);
         }
 
-        th,
-        td {
-            border: 1px solid #888;
-            padding: 8px;
-            text-align: center;
+        return processKeys;
+    }
+
+    // ✅ جلب العناصر (items) المرتبطة بعملية معينة
+    async function fetchItemsForProcess(processKey) {
+        const items = [];
+        const relatedDBs = [];
+
+        const defDB = `def_${processKey}`;
+        const iteDB = `ite_${processKey}`;
+
+        if (await checkAndAddDatabase(defDB)) relatedDBs.push(defDB);
+
+        if (await checkAndAddDatabase(iteDB)) {
+            relatedDBs.push(iteDB);
+            const db = new noUpgrade(iteDB);
+            const rows = await db.getAllDataFromTable("rows");
+
+            if (Array.isArray(rows)) {
+                for (const row of rows) {
+                    if (row?.key !== undefined) {
+                        const itemKey = row.key.toString();
+                        items.push(itemKey);
+
+                        // ✅ جلب قواعد البيانات الخاصة بالعنصر
+                        const itemDBs = await fetchDatabasesForItem(itemKey);
+                        relatedDBs.push(...itemDBs);
+                    }
+                }
+            }
         }
 
-        th {
-            background-color: #f0f0f0;
-        }
+        return { items, relatedDBs };
+    }
 
-        tfoot td {
-            font-weight: bold;
-            background-color: #e8f4ea;
-        }
-    </style>
-</head>
-
-<body>
-
-    <h3>📊 بيانات المناقصات</h3>
-    <table id="dataTable">
-        <thead>
-            <tr>
-                <th>رقم المناقصة</th>
-                <th>الجهة</th>
-                <th>قيمة التقدير (ج.م)</th>
-                <th>تاريخ الإغلاق</th>
-            </tr>
-        </thead>
-        <tbody id="tableBody"></tbody>
-        <tfoot>
-            <tr>
-                <td colspan="2">الإجمالي</td>
-                <td id="totalCell">—</td>
-                <td></td>
-            </tr>
-        </tfoot>
-    </table>
-
-    <br>
-    <button onclick="exportToExcel()">📥 تصدير إلى Excel</button>
-
-    <script>
-        // بيانات المناقصات (بالأرقام فقط لتسهيل الجمع)
-        const tenders = [
-            { id: "2025-001", agency: "وزارة النقل", value: 500000, deadline: "2025-07-01" },
-            { id: "2025-002", agency: "شركة الكهرباء", value: 1200000, deadline: "2025-07-10" },
-            { id: "2025-003", agency: "الهيئة العامة للمياه", value: 850000, deadline: "2025-07-15" }
+    // ✅ جلب قواعد البيانات المرتبطة بعنصر معين (item)
+    async function fetchDatabasesForItem(itemKey) {
+        const itemDBs = [];
+        const staticSections = [
+            "raw", "equipments", "labor", "transport", "other",
+            "cond", "files", "Timeline"
         ];
 
-        // ملء الجدول
-        const tableBody = document.getElementById("tableBody");
-        let totalValue = 0;
-        tenders.forEach(tender =>
-        {
-            const row = document.createElement("tr");
-            row.innerHTML = `
-      <td>${tender.id}</td>
-      <td>${tender.agency}</td>
-      <td>${tender.value.toLocaleString()} ج.م</td>
-      <td>${tender.deadline}</td>
-    `;
-            totalValue += tender.value;
-            tableBody.appendChild(row);
-        });
+        // ✅ قواعد البيانات الثابتة المرتبطة بالعنصر
+        for (const section of staticSections) {
+            const dbName = `${section}_${itemKey}`;
+            if (await checkAndAddDatabase(dbName)) {
+                itemDBs.push(dbName);
+            }
+        }
 
-        // إدراج الإجمالي في خلية التذييل
-        document.getElementById("totalCell").textContent = totalValue.toLocaleString() + " ج.م";
+        // ✅ قواعد بيانات الفواتير المتكررة (bill_x_itemKey)
+        let i = 1;
+        while (i <= 1000) {
+            const billDB = `bill_${i}_${itemKey}`;
+            const exists = await checkDatabaseExists(billDB);
+            if (!exists) break;
 
-        // التصدير إلى Excel
-        function exportToExcel()
-        {
-            const table = document.getElementById("dataTable");
+            allDatabaseNames.push(billDB);
+            itemDBs.push(billDB);
 
-            // تحويل الجدول إلى ورقة عمل
-            const worksheet = XLSX.utils.table_to_sheet(table);
+            const db = new noUpgrade(billDB);
+            const rows = await db.getAllDataFromTable("rows");
 
-            // إعداد مصفوفة لدمج الخلايا
-            const merges = [];
-
-            // مسح الجدول يدويًا للعثور على colspan و rowspan
-            const rows = table.rows;
-            for (let rowIndex = 0; rowIndex < rows.length; rowIndex++)
-            {
-                const cells = rows[rowIndex].cells;
-                let colOffset = 0;
-
-                for (let cellIndex = 0; cellIndex < cells.length; cellIndex++)
-                {
-                    const cell = cells[cellIndex];
-                    const colspan = parseInt(cell.getAttribute("colspan") || "1");
-                    const rowspan = parseInt(cell.getAttribute("rowspan") || "1");
-
-                    // إيجاد العمود الفعلي في الجدول
-                    let col = 0;
-                    for (let i = 0; i < cellIndex + colOffset; i++)
-                    {
-                        const prevCell = cells[i];
-                        if (prevCell)
-                        {
-                            const prevColspan = parseInt(prevCell.getAttribute("colspan") || "1");
-                            col += prevColspan;
+            // ✅ قواعد بيانات أقسام كل فاتورة
+            if (Array.isArray(rows)) {
+                for (const row of rows) {
+                    if (row?.key !== undefined) {
+                        const billSections = [
+                            "PandBillNo", "PandBillLength", "PandBillWidth",
+                            "PandBillHight", "PandBillKg", "PandBillPrice", "PandBillPercent"
+                        ];
+                        for (const section of billSections) {
+                            const sectionDB = `${row.key}__n_${section}`;
+                            if (await checkAndAddDatabase(sectionDB)) {
+                                itemDBs.push(sectionDB);
+                            }
                         }
                     }
-
-                    if (colspan > 1 || rowspan > 1)
-                    {
-                        merges.push({
-                            s: { r: rowIndex, c: col },
-                            e: { r: rowIndex + rowspan - 1, c: col + colspan - 1 }
-                        });
-                    }
-                    
                 }
             }
 
-            // ربط الدمج بالورقة
-            worksheet["!merges"] = merges;
-
-            // إنشاء المصنف وتصديره
-            const workbook = XLSX.utils.book_new();
-            XLSX.utils.book_append_sheet(workbook, worksheet, "المناقصات");
-            XLSX.writeFile(workbook, "مناقصات.xlsx");
-            
+            i++;
         }
 
-    </script>
+        // ✅ تخزين قواعد البيانات الخاصة بالعنصر
+        dbsPerItem[itemKey] = [...itemDBs];
 
-</body>
+        return itemDBs;
+    }
 
-</html>
+    // ✅ جلب كافة البيانات: عمليات + عناصر + قواعد بيانات
+    async function getAllDatabaseStructure() {
+        // ✅ تهيئة كل المتغيرات لتكون نظيفة
+        allDatabaseNames.length = 0;
+        allProcessNames.length = 0;
+        Object.keys(itemsPerProcess).forEach(key => delete itemsPerProcess[key]);
+        Object.keys(dbsPerItem).forEach(key => delete dbsPerItem[key]);
+
+        const processes = await fetchAllProcesses();
+
+        for (const processKey of processes) {
+            allProcessNames.push(processKey);
+            const processData = await fetchItemsForProcess(processKey);
+            itemsPerProcess[processKey] = processData;
+        }
+
+        console.log("✅ قواعد البيانات:", allDatabaseNames);
+        console.log("📌 العمليات:", allProcessNames);
+        console.log("🧩 العناصر لكل عملية:", itemsPerProcess);
+        console.log("📦 قواعد البيانات لكل عنصر:", dbsPerItem);
+
+        return {
+            allDatabaseNames: [...allDatabaseNames],
+            allProcessNames: [...allProcessNames],
+            itemsPerProcess: { ...itemsPerProcess },
+            dbsPerItem: { ...dbsPerItem }
+        };
+    }
+
+    // ✅ جلب بيانات عملية واحدة حسب اسمها
+    async function getSingleProcessData(processKey) {
+        if (!processKey || typeof processKey !== "string") {
+            console.warn("⚠️ يرجى إدخال اسم عملية صالح");
+            return null;
+        }
+
+        allDatabaseNames.length = 0;
+
+        const result = {
+            process: processKey,
+            items: [],
+            relatedDatabases: [],
+            databasesPerItem: {}
+        };
+
+        const allProExists = await checkDatabaseExists("allPro");
+        if (!allProExists) {
+            console.warn("❌ قاعدة البيانات 'allPro' غير موجودة");
+            return null;
+        }
+
+        // ✅ التأكد من أن العملية موجودة في "allPro"
+        const db = new noUpgrade("allPro");
+        const rows = await db.getAllDataFromTable("rows");
+        const processFound = rows?.some(row => row?.key?.toString() === processKey);
+        if (!processFound) {
+            console.warn("❌ العملية غير موجودة:", processKey);
+            return null;
+        }
+
+        // ✅ جلب العناصر وقواعد البيانات المرتبطة
+        const data = await fetchItemsForProcess(processKey);
+        result.items = data.items;
+        result.relatedDatabases = data.relatedDBs;
+
+        for (const item of data.items) {
+            result.databasesPerItem[item] = dbsPerItem[item] || [];
+        }
+
+        console.log("📍 بيانات العملية:", result);
+        return result;
+    }
+
+    // ✅ تنفيذ اختبارات تلقائية في حالة الحاجة
+    (async () => {
+        await getAllDatabaseStructure();                      // اختبار شامل لكل البيانات
+      //  await getSingleProcessData("yzQe1750303300564");     // اختبار عملية محددة
+    })();
+</script>
